# Snake

./: CMakeLists.txt  README.md
include/: Game.hpp  Snake.hpp  Utility.hpp
src/: Game.cpp  Main.cpp  Snake.cpp  Utility.cpp
